@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -85,4 +85,29 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Target Name="Update-Delegates" Inputs="mkdelegates" Outputs="Mono.Rocks\Delegates.cs">
+    <Exec Command="perl mkdelegates -n 4 &gt; Mono.Rocks\Delegates.cs" />
+  </Target>
+  <Target Name="Update-Eithers" Inputs="mkeithers" Outputs="Mono.Rocks\Eithers.cs">
+    <Exec Command="perl mkeithers -n 4 &gt; Mono.Rocks\Eithers.cs" />
+  </Target>
+  <Target Name="Update-Lambdas" Inputs="mklambda" Outputs="Mono.Rocks\Lambdas.cs">
+    <Exec Command="perl mklambda -n 4 &gt; Mono.Rocks\Lambdas.cs" />
+  </Target>
+  <Target Name="Update-Tuples" Inputs="mktuples" Outputs="Mono.Rocks\Tuples.cs">
+    <Exec Command="perl mktuples -n 4 &gt; Mono.Rocks\Tuples.cs" />
+  </Target>
+  <PropertyGroup>
+    <BeforeBuildDependsOnTargets>
+      Update-Delegates;
+      Update-Eithers;
+      Update-Lambdas;
+      Update-Tuples;
+    </BeforeBuildDependsOnTargets>
+  </PropertyGroup>
+  <Target Name="BeforeBuild" DependsOnTargets="$(BeforeBuildDependsOnTargets)">
+  </Target>
+  <Target Name="shell">
+    <Exec Command="csharp -r:$(OutputPath)$(TargetFileName)" />
+  </Target>
 </Project>
